--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -87,9 +87,10 @@ jobs:
             echo "📌 Iniciando el nuevo contenedor con variables de entorno..."
             sudo docker run -d \
               --name ${{ secrets.DOCKER_IMAGE_NAME }} \
-              -p 80:10021 \
+              -p 80:10011 \
               -e SPRING_NEO4J_URI=${{ secrets.SPRING_NEO4J_URI }} \
               -e SPRING_NEO4J_AUTHENTICATION_USERNAME=${{ secrets.SPRING_NEO4J_AUTHENTICATION_USERNAME }} \
               -e SPRING_NEO4J_AUTHENTICATION_PASSWORD=${{ secrets.SPRING_NEO4J_AUTHENTICATION_PASSWORD }} \
+              -e SPRING_KAFKA_BOOTSTRAP-SERVERS=${{ secrets.SPRING_KAFKA_BOOTSTRAP_SERVERS }} \
               ${{ secrets.DOCKER_IMAGE_NAME }}:latest
             echo "✅ Despliegue completado con Docker 🚀"
